# llama-factory-dock

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: dind.md  llamafactory-cli-train-help.md
recipes/: README.md  README_zh.md
recipes/v1/train_full/: train_full_deepspeed.yaml
src/dock/: __init__.py  app.py  cli.py  dryrun.py  main.py  mcp.py
src/dock/dock/: __init__.py  dryrun.py  instance.py
src/dock/dock/utils/: __init__.py  loader.py
src/dock/tests/: base.py  conftest.py  test_train_help.py  test_train_help_integration.py
src/dock/utils/: config_handler.py  error_handler.py  logger.py  unique_id.py
